# ZPDR

./: .codecov.yml  API_REFERENCE.md  CLAUDE.md  Pure-ZPDR.md  README.md  phase1-completion.md  phase1-implementation.md  phase2-implementation.md  phase3-implementation.md  phase4-implementation.md  prime-framework-1.v  prime-framework-2.v  prime-framework-3.v  prime-framework-4.1.v  prime-framework-4.v  prime-framework-5.1.v  prime-framework-5.2.v  prime-framework-5.3.v  prime-framework-5.v  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini  zpdr-plan.md
.github/workflows/: basic-tests.yml  run-tests.yml
notebooks/: ZPDR_Fundamentals.ipynb
zpdr/: __init__.py  cli.py
zpdr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
zpdr/core/: __init__.py  error_corrector.py  geometric_spaces.py  manifest.py  multivector.py  optimized_multivector.py  streaming_zpdr_processor.py  trivector_digest.py  verifier.py  zpa_manifest.py  zpdr_processor.py
zpdr/examples/: __init__.py  basic_example.py  error_correction_example.py  file_processor_example.py  optimization_example.py  zpdr_cli.py
zpdr/tests/: __init__.py  test_basic.py  test_error_correction.py  test_optimizations.py  test_verification.py  test_zpdr_coherence.py  test_zpdr_error_correction.py  test_zpdr_full_pipeline.py  test_zpdr_invariant_preservation.py  test_zpdr_multivector_encoding.py  test_zpdr_phase1_precision.py  test_zpdr_serialization.py  test_zpdr_trilateral_extraction.py  test_zpdr_verification.py  test_zpdr_zpa_extraction.py
zpdr/utils/: __init__.py  benchmarking.py  coherence_calculator.py  (+2 more)
