[metadata]
name = zpdr
description = Zero-Point Data Resolution framework
author = ZPDR Team
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy>=1.20.0
    matplotlib>=3.5.0
    scipy>=1.7.0
python_requires = >=3.8

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=4.0
    mypy>=0.910
    flake8>=5.0
    tox>=3.24

[options.package_data]
zpdr = py.typed

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist